# mujoco_mpc

./: .gitmodules
cmake/: MpcOptions.cmake
mjpc/: CMakeLists.txt  insat_task.cc  insat_task.h  simulate.cc  trajectory.cc  trajectory.h
mjpc/pinsat/include/common/: Types.hpp
mjpc/pinsat/include/common/insat/: InsatTypes.hpp
mjpc/pinsat/include/planners/insat/opt/: MjpcOpt.hpp
mjpc/pinsat/src/planners/insat/opt/: BSplineOpt.cpp  DummyOpt.cpp  MjpcOpt.cpp
mjpc/planners/ilqg/: planner.cc  policy.cc  policy.h
mjpc/planners/insat_opt/: planner.cc  planner.h
mjpc/planners/mjpc_opt/: planner.cc  planner.h
mjpc/states/: state.cc  state.h
mjpc/tasks/: CMakeLists.txt  insat_task.cc  insat_task.h  tasks.cc
mjpc/tasks/insat/gen3_flip/: gen3_flip.cc  gen3_flip.h  gen3_flip.xml  gen3_flip_heuristic.xml  gen3_flip_obstacles.xml  meshes  task.xml
mjpc/tasks/insat/gen3_hebi/: gen3_hebi.cc  gen3_hebi.h  gen3_hebi.xml  gen3_hebi_heuristic.xml  gen3_hebi_obstacles.xml  obstacles.xml  rab1.xml  rab2.xml  s_pipe.xml  task.xml
mjpc/tasks/insat/gen3_realflip/: gen3_realflip.cc  gen3_realflip.h  gen3_realflip.xml  gen3_realflip_obstacles.xml  task.xml
mjpc/tasks/insat/gen3_realflip/meshes/: hebi_distal.stl  hebi_mount.stl
mjpc/tasks/insat/gen3_realflip/meshes/hebi/: URDF_calculations.pptx
mjpc/tasks/panda/: panda.cc  panda.h  task.xml
mjpc/tasks/planar_pusher/: planar_pusher.cc  planar_pusher.h
mjpc/test/insat/: mjpc_pp.cc  opt_test.cc
